--- a/Dockerfile20
+++ b/Dockerfile20
@@ -25,15 +25,16 @@ LABEL Name="Images for CRE" \
 # https://github.com/tesseract-ocr/tessdoc
 # 
 # 
-RUN  
-  add-apt-repository ppa:alex-p/tesseract-ocr && \
-  apt-get update && \
-  apt-get -y upgrade && \
-  apt-get -y --no-install-recommends install tesseract-ocr tesseract-ocr-eng
+##RUN  
+##  add-apt-repository ppa:alex-p/tesseract-ocr && \
+##  apt-get update && \
+## apt-get -y upgrade && \
+##  apt-get -y --no-install-recommends install tesseract-ocr tesseract-ocr-eng
 #  apt-get -y --no-install-recommends install tesseract-ocr-all  && \
 #  apt-get -y --no-install-recommends install tesseract-ocr-deu tesseract-ocr-deu-frak
 #   tesseract-ocr-script-frak
 #apt-get install tesseract-ocr-all
+RUN apt-get -y --no-install-recommends install tesseract-ocr tesseract-ocr-eng
 RUN pip3 install python-imaging pytesseract
 
 ## Move latex to different image
