--- a/Dockerfile20
+++ b/Dockerfile20
@@ -23,7 +23,7 @@ LABEL Name="Images for CRE" \
 
 # install tesseract
 # https://github.com/tesseract-ocr/tessdoc
-# 
+# https://notesalexp.org/tesseract-ocr/#tesseract_5.x 
 # 
 ##RUN  
 ##  add-apt-repository ppa:alex-p/tesseract-ocr && \
@@ -34,7 +34,10 @@ LABEL Name="Images for CRE" \
 #  apt-get -y --no-install-recommends install tesseract-ocr-deu tesseract-ocr-deu-frak
 #   tesseract-ocr-script-frak
 #apt-get install tesseract-ocr-all
-RUN apt-get -y --no-install-recommends install tesseract-ocr tesseract-ocr-eng
+
+RUN add-apt-repository ppa:alex-p/tesseract-ocr-devel && \
+    apt-get update && \
+    apt-get -y --no-install-recommends install tesseract-ocr tesseract-ocr-eng
 RUN pip3 install python-imaging pytesseract
 
 ## Move latex to different image
