--- a/Dockerfile20
+++ b/Dockerfile20
@@ -35,9 +35,10 @@ LABEL Name="Images for CRE" \
 #   tesseract-ocr-script-frak
 #apt-get install tesseract-ocr-all
 
+# https://launchpad.net/~alex-p/+archive/ubuntu/tesseract-ocr-devel
 RUN add-apt-repository ppa:alex-p/tesseract-ocr-devel && \
     apt-get update && \
-    apt-get -y --no-install-recommends install tesseract-ocr tesseract-ocr-eng
+    apt-get -y --no-install-recommends install tesseract
 RUN pip3 install python-imaging pytesseract
 
 ## Move latex to different image
