--- a/Dockerfile20
+++ b/Dockerfile20
@@ -41,9 +41,11 @@ LABEL Name="Images for CRE" \
 
 # https://notesalexp.org/tesseract-ocr/#tesseract_5.x 
 RUN echo "deb https://notesalexp.org/tesseract-ocr5/$(lsb_release -cs)/ $(lsb_release -cs) main" \
-| tee /etc/apt/sources.list.d/notesalexp.list > /dev/null && \
-    wget -O - https://notesalexp.org/debian/alexp_key.asc | apt-key add && \
-    apt-get update && apt-cache search tesseract && apt-get install -y --no-install-recommends tesseract-ocr
+| tee /etc/apt/sources.list.d/notesalexp.list > /dev/null
+RUN wget -O - https://notesalexp.org/debian/alexp_key.asc | apt-key add 
+RUN apt-get update 
+RUN apt-cache search tesseract 
+RUN apt-get install -y --no-install-recommends tesseract-ocr
 #pytesseract ocrmypdf 
 
 
