--- a/Dockerfile20
+++ b/Dockerfile20
@@ -42,7 +42,9 @@ LABEL Name="Images for CRE" \
 # https://notesalexp.org/tesseract-ocr/#tesseract_5.x 
 RUN echo "deb https://notesalexp.org/tesseract-ocr5/$(lsb_release -cs)/ $(lsb_release -cs) main" \
 | tee /etc/apt/sources.list.d/notesalexp.list > /dev/null
-RUN wget -O - https://notesalexp.org/debian/alexp_key.asc | apt-key add 
+RUN wget https://notesalexp.org/debian/alexp_key.asc 
+RUN echo alexp_key.asc | apt-key add 
+RUN rm -f alexp_key.asc
 RUN apt-get update 
 RUN apt-cache search tesseract 
 RUN apt-get install -y --no-install-recommends tesseract-ocr
