--- a/Dockerfile20
+++ b/Dockerfile20
@@ -40,6 +40,7 @@ LABEL Name="Images for CRE" \
 ##    apt-get -y --no-install-recommends install tesseract
 
 # https://notesalexp.org/tesseract-ocr/#tesseract_5.x 
+RUN apt-get install apt-transport-https
 RUN echo "deb https://notesalexp.org/tesseract-ocr5/$(lsb_release -cs)/ $(lsb_release -cs) main" \
 | tee /etc/apt/sources.list.d/notesalexp.list > /dev/null
 RUN wget https://notesalexp.org/debian/alexp_key.asc 
