--- a/Dockerfile20
+++ b/Dockerfile20
@@ -43,7 +43,7 @@ LABEL Name="Images for CRE" \
 RUN apt-get install apt-transport-https
 RUN echo "deb https://notesalexp.org/tesseract-ocr5/$(lsb_release -cs)/ $(lsb_release -cs) main" \
 | tee /etc/apt/sources.list.d/notesalexp.list > /dev/null
-RUN wget https://notesalexp.org/debian/alexp_key.asc 
+RUN wget -O alexp_key.asc https://notesalexp.org/debian/alexp_key.asc 
 RUN echo alexp_key.asc | apt-key add 
 RUN rm -f alexp_key.asc
 RUN apt-get update 
