--- a/Dockerfile20
+++ b/Dockerfile20
@@ -2,7 +2,7 @@
 # Images Dockerfile
 #
 
-FROM ubuntu:20.04 
+FROM tamboraorg/creubuntu:2020.0
 MAINTAINER Michael Kahle <michael.kahle@yahoo.de>
 
 ARG BUILD_YEAR=2020
