--- a/Dockerfile20
+++ b/Dockerfile20
@@ -50,7 +50,7 @@ RUN apt-get install -y --no-install-recommends tesseract-ocr
 #pytesseract ocrmypdf 
 
 
-RUN pip3 install python3-pyocr 
+RUN pip3 install pyocr 
 
 
 
