--- a/Dockerfile20
+++ b/Dockerfile20
@@ -89,7 +89,7 @@ RUN apt-get -y --no-install-recommends install libvips-tools libvips-dev
 
 RUN mkdir -p /cre && touch /cre/versions.txt && \
    echo "$(date +'%F %R') \t creImage \t $XXX_VERSION" >> /cre/versions.txt && \
-   echo "$(date +'%F %R') \t \t $(tesseract --version | grep tesseract)" >> /cre/versions.txt && \ 
+   echo "$(date +'%F %R') \t \t $(tesseract --version | grep tesseract)" >> /cre/versions.txt 
 ##   echo "$(date +'%F %R') \t \t $(convert -version | grep Version)" >> /cre/versions.txt && \ 
 ##   echo "$(date +'%F %R') \t \t $(vips -version)" >> /cre/versions.txt && \ 
 ##   echo "$(date +'%F %R') \t   openCV \t $(python3 -c 'import cv2; print(cv2.__version__)')" >> /cre/versions.txt && \
