--- a/Dockerfile20
+++ b/Dockerfile20
@@ -90,13 +90,17 @@ RUN apt-get -y --no-install-recommends install libvips-tools libvips-dev
 #tesseract-ocr tesseract-ocr-deu tesseract-ocr-deu-frak
 
 
+# install Latex
+RUN apt-get -y --no-install-recommends install texlive-full latex-make latex2html python3-latexcodec texlive-fonts-recommended
+
+
 RUN mkdir -p /cre && touch /cre/versions.txt && \
    echo "$(date +'%F %R') \t creMedia \t $XXX_VERSION" >> /cre/versions.txt && \
-   echo "$(date +'%F %R') \t \t $(tesseract --version | grep tesseract)" >> /cre/versions.txt 
+   echo "$(date +'%F %R') \t \t $(tesseract --version | grep tesseract)" >> /cre/versions.txt && \ 
 ##   echo "$(date +'%F %R') \t \t $(convert -version | grep Version)" >> /cre/versions.txt && \ 
 ##   echo "$(date +'%F %R') \t \t $(vips -version)" >> /cre/versions.txt && \ 
 ##   echo "$(date +'%F %R') \t   openCV \t $(python3 -c 'import cv2; print(cv2.__version__)')" >> /cre/versions.txt && \
-##   echo "$(date +'%F %R') \t \t $(latex --version | grep Debian)" >> /cre/versions.txt 
+   echo "$(date +'%F %R') \t \t $(latex --version | grep Debian)" >> /cre/versions.txt 
 
 
 COPY cre /cre
