--- a/Dockerfile18
+++ b/Dockerfile18
@@ -60,7 +60,7 @@ RUN pip3 install pyocr
 # opencv?
 # OpenCV
 RUN apt-get -y --no-install-recommends  install python3-opencv
-RUN pip3 install opencv-python
+##RUN pip3 install opencv-python
 
 
 # install image magick
