--- a/.github/workflows/version2020.yml
+++ b/.github/workflows/version2020.yml
@@ -15,7 +15,7 @@ jobs:
   versions:
     runs-on: ubuntu-latest
     container:
-      image: tamboraorg/cremedia:2020.0
+      image: credocker/cremedia:2020.0
     steps:
       - uses: actions/checkout@v3
       - name: Set ownership
