--- a/Dockerfile20
+++ b/Dockerfile20
@@ -49,6 +49,13 @@ RUN apt-cache search tesseract
 RUN apt-get install -y --no-install-recommends tesseract-ocr
 #pytesseract ocrmypdf 
 
+# Install Spellchecker
+# https://wiki.ubuntuusers.de/GNU_Aspell/
+RUN apt-get install -y --no-install-recommends aspell 
+# apt-get install aspell-de
+# https://wiki.ubuntuusers.de/Hunspell/
+RUN apt-get install -y --no-install-recommends hunspell hunspell-tools
+# apt-get install hunspell-de-de 
 
 RUN pip3 install pyocr 
 
