--- a/Dockerfile20
+++ b/Dockerfile20
@@ -105,6 +105,8 @@ RUN apt-get -y --no-install-recommends install texlive-full latex-make latex2htm
 RUN mkdir -p /cre && touch /cre/versions.txt && \
    echo "$(date +'%F %R') \t creMedia \t $XXX_VERSION" >> /cre/versions.txt && \
    echo "$(date +'%F %R') \t  $(tesseract --version | grep tesseract)" >> /cre/versions.txt && \ 
+   echo "$(date +'%F %R') \t  $(aspell --version)" >> /cre/versions.txt && \ 
+   echo "$(date +'%F %R') \t  $(hunspell --version | grep Hunspell)" >> /cre/versions.txt && \ 
 ##   echo "$(date +'%F %R') \t  $(convert -version | grep Version)" >> /cre/versions.txt && \ 
 ##   echo "$(date +'%F %R') \t  $(vips -version)" >> /cre/versions.txt && \ 
 ##   echo "$(date +'%F %R') \t  openCV \t $(python3 -c 'import cv2; print(cv2.__version__)')" >> /cre/versions.txt && \
