--- a/Dockerfile22
+++ b/Dockerfile22
@@ -104,6 +104,10 @@ RUN apt-get -y --no-install-recommends install libvips-tools libvips-dev
 # install Latex
 RUN apt-get -y --no-install-recommends install texlive-full latex-make latex2html python3-latexcodec texlive-fonts-recommended
 
+# https://code.mpimet.mpg.de/projects/cdo
+# https://www.isimip.org/protocol/preparing-simulation-files/cdo-help/
+# install cdo
+RUN apt-get -y --no-install-recommends install cdo
 
 RUN mkdir -p /cre && touch /cre/versions.txt && \
    echo "$(date +'%F %R') \t creMedia \t $XXX_VERSION" >> /cre/versions.txt && \
@@ -114,7 +118,8 @@ RUN mkdir -p /cre && touch /cre/versions.txt && \
 ##   echo "$(date +'%F %R') \t  $(vips -version)" >> /cre/versions.txt && \ 
 ##   echo "$(date +'%F %R') \t  openCV \t $(python3 -c 'import cv2; print(cv2.__version__)')" >> /cre/versions.txt && \
    echo "$(date +'%F %R') \t  $(latex --version | grep Debian)" >> /cre/versions.txt && \ 
-   echo "$(date +'%F %R') \t  $(ffmpeg -version | sed -e 's/-0ubuntu.*//g' | sed -e 's/configuration:.*//g'  | grep version)" >> /cre/versions.txt
+   echo "$(date +'%F %R') \t  $(ffmpeg -version | sed -e 's/-0ubuntu.*//g' | sed -e 's/configuration:.*//g'  | grep version)" >> /cre/versions.txt && \ 
+   echo "$(date +'%F %R') \t  $(cdo -V)" >> /cre/versions.txt
 
 
 COPY cre /cre
