--- a/.github/workflows/version2020.yml
+++ b/.github/workflows/version2020.yml
@@ -31,6 +31,6 @@ jobs:
         uses: EndBug/add-and-commit@v9
         with:
 #          pull: '--rebase --autostash ...'
-          add: 'cre/versions/versions_2020.txt'   
+          add: 'cre/versions/versions_2020.txt cre/versions/requirements_2020.txt'   
           tag_push: '--force'   
 
