--- a/.github/workflows/version2022.yml
+++ b/.github/workflows/version2022.yml
@@ -27,9 +27,20 @@ jobs:
       - name: cp version.txt
 #        run: (cp /cre/versions.txt cre/versions/versions_2022.txt) 
         run: (cut -f2,3 /cre/versions.txt > cre/versions/versions_2022.txt)
+#
+      - name: set current year
+        run: (echo -n "CURRENT_YEAR=$(date +'%Y.0')" >> $GITHUB_ENV) 
+      - name: set current version
+        run: (echo -n "CURRENT_VERSION=$CRE_VERSION" >> $GITHUB_ENV) 
+      - name: cat requirements.txt
+        run: (cat /cre/requirements.txt.orig) 
+      - name: cp requirements.txt
+        if: env.CURRENT_VERSION == env.CURRENT_YEAR
+        run: (cp /cre/requirements.txt.orig cre/versions/requirements_2022.txt)
+#
       - name: Submit changes       
         uses: EndBug/add-and-commit@v9
         with:
 #          pull: '--rebase --autostash ...'
-          add: 'cre/versions/versions_2022.txt'
+          add: 'cre/versions/versions_2022.txt cre/versions/requirements_2022.txt'
           tag_push: '--force'
